# AutoTux

./: .gitignore  README.md  project_structure.MD  sonar-project.properties
Odroid/: CMakeLists.txt  sonar-project.properties
Odroid/ATConfigurator/: CMakeLists.txt
Odroid/ATConfigurator/apps/: ATConfigurator.cpp
Odroid/ATConfigurator/include/od/: ConferenceData.h  ConferenceModule.h
Odroid/ATConfigurator/include/ui/: ATCWindow.h  CamSettings.h  CamView.h  Footer.h  Header.h  MainUI.h  Menu.h  State.h  ValMonitor.h
Odroid/ATConfigurator/src/od/: ConferenceData.cpp  ConferenceModule.cpp
Odroid/ATConfigurator/src/ui/: CamSettings.cpp  CamView.cpp  Footer.cpp  Header.cpp  MainUI.cpp  Menu.cpp  State.cpp  ValMonitor.cpp
Odroid/AutoTuxProxy/: CMakeLists.txt
Odroid/AutoTuxProxy/apps/: AutoTuxProxy.cpp
Odroid/AutoTuxProxy/include/camera/: Camera.h  CameraProxy.h  OpenCVCamera.h
Odroid/AutoTuxProxy/include/containerfactory/: SBDContainer.h  VDContainer.h
Odroid/AutoTuxProxy/include/packetio/: PacketBroadcaster.h  PacketReceiver.h
Odroid/AutoTuxProxy/include/proxy/: Proxy.h  ProxyMaster.h
Odroid/AutoTuxProxy/include/serial/: BufferParser.h  BufferWrapper.h  IUSBConnector.h  SerialBuffer.h  SerialHandler.h  SerialIOImpl.h  SerialIOInterface.h  USBConnector.h  USBConnector_impl.h  USBHandler.h
Odroid/AutoTuxProxy/src/: AutoTuxProxy.cpp  SerialConnector.cpp
Odroid/AutoTuxProxy/src/camera/: Camera.cpp  CameraProxy.cpp  OpenCVCamera.cpp
Odroid/AutoTuxProxy/src/containerfactory/: SBDContainer.cpp  VDContainer.cpp
Odroid/AutoTuxProxy/src/netstrings/: netstring.cpp
Odroid/AutoTuxProxy/src/packetio/: PacketBroadcaster.cpp  PacketReceiver.cpp
Odroid/AutoTuxProxy/src/proxy/: Proxy.cpp  ProxyMaster.cpp
Odroid/AutoTuxProxy/src/serial/: BufferParser.cpp  BufferWrapper.cpp  SerialBuffer.cpp  SerialHandler.cpp  SerialIOImpl.cpp  USBConnector.cpp  USBHandler.cpp
Odroid/AutoTuxProxy/testsuite/: BufferWrapperTest.cpp  BufferWrapperTestSuite.h  MockSerialInterface.h  MockUSBConnector.h  SerialBufferTest.cpp  SerialHandlerTest.cpp  TestMain.cpp  USBHandlerTest.cpp
Odroid/DecisionMaker/: CMakeLists.txt
Odroid/DecisionMaker/apps/: DecisionMaker.cpp  DecisionMakerMain.cpp
Odroid/DecisionMaker/include/decisionmaker/: DecisionMaker.h
Odroid/DecisionMaker/include/overtaker/: Overtaker.h
Odroid/DecisionMaker/include/packetio/: PacketBroadcaster.h  PacketReceiver.h
Odroid/DecisionMaker/include/parker/: Parker.h
Odroid/DecisionMaker/src/decisionmaker/: DecisionMaker.cpp
Odroid/DecisionMaker/src/overtaker/: Overtaker.cpp
Odroid/DecisionMaker/src/packetio/: PacketBroadcaster.cpp  PacketReceiver.cpp
Odroid/DecisionMaker/src/parker/: Parker.cpp
Odroid/LaneFollower/: CMakeLists.txt
Odroid/LaneFollower/apps/: LaneFollower.cpp
Odroid/LaneFollower/include/: LaneDetector.h  LaneFollower.h
Odroid/LaneFollower/src/: LaneDetector.cpp  LaneFollower.cpp
Odroid/LaneFollower/testsuite/: LFTestSuite1.h
Odroid/Overtake/: CMakeLists.txt
Odroid/Overtake/apps/: Overtaking.cpp
Odroid/Overtake/include/: Overtaking.h
Odroid/Overtake/src/: Overtaking.cpp
Odroid/Overtaking/: CMakeLists.txt
Odroid/Overtaking/apps/: Overtake.cpp
Odroid/Overtaking/include/: Overtake.h  Parking.h
Odroid/Overtaking/src/: Overtake.cpp  Parking.cpp
Odroid/SerialConnector/: CMakeLists.txt  SerialConnector.h
Odroid/SerialConnector/src/: SerialConnector.cpp  main.cpp
Odroid/SerialConnector/src/packetio/: PacketBroadcaster.cpp  PacketBroadcaster.h  PacketReceiver.cpp  PacketReceiver.h
Odroid/SerialConnector/src/serial/: SerialConnector.cpp  SerialConnector.h  USBConnector.cpp  USBConnector.h
Odroid/cmake/Modules/: CheckGTestEnivronment.cmake
doc/: USBProtocol.MD
doc/final_report/: final_report.ltx  final_report.tex
doc/final_report/auto/: SAD.el  final_report.el
doc/final_report/tex/: appendix.tex  ch1.tex  ch2.tex  ch3.tex  ch4.tex  ch5.tex  ch6.tex  ch7.tex  ch8.tex  ch9.tex  style.sty  title.tex
doc/final_report/tex/auto/: appendix.el  ch2.el  ch3.el  ch4.el  ch5.el  ch6.el  ch9.el  style.el
resources/: AutomotiveData.odvd  configuration  killall_odsim.sh  parking.rec  restart_simv.sh  run_ods_simv_simc.sh
resources/recordings/: new_ovt_recordings
stm32/: LEDDriver.c  LEDDriver.h  Makefile  autotuxconfig.h  autotuxhardware.h  controlOutput.c  controlOutput.h  halconf.h  hardwareIR.c  hardwareIR.h  hardwarePWM.c  hardwarePWM.h  hardwareRC.c  hardwareRC.h  hardwareUS.c  hardwareUS.h  hardwareWE.c  hardwareWE.h  main.c  make_and_flash.sh  mcuconf.h  neopixelSWD.c  neopixelSWD.h  packet.c  packet.h  packetHandler.h  readme.md  sensorInput.c  sensorInput.h  serialConnection.c  serialConnection.h
stm32/archived/: hardwareWE.c  hardwareWE.h
stm32/chibiconf/: halconf.h
stm32/conf/: mcuconf.h
stm32/lib/ChibiOS_16.1.4/demos/STM32/RT-STM32F407-DISCOVERY/: halconf.h  main.c  mcuconf.h
stm32/lib/ChibiOS_16.1.4/demos/STM32/RT-STM32F407-DISCOVERY/.dep/: board.o.d  chcond.o.d  chcore.o.d  chcore_v7m.o.d  chdebug.o.d  chdynamic.o.d  chevents.o.d  chheap.o.d  chmboxes.o.d  chmemcore.o.d  chmempools.o.d  chmsg.o.d  chmtx.o.d  chqueues.o.d  chregistry.o.d  chschd.o.d  chsem.o.d  chsys.o.d  chthreads.o.d  chtm.o.d  chvt.o.d  crt1.o.d  hal.o.d  hal_buffers.o.d  hal_lld.o.d  hal_mmcsd.o.d  hal_queues.o.d  main.o.d  nvic.o.d  osal.o.d  pal.o.d  pal_lld.o.d  serial.o.d  serial_lld.o.d  st.o.d  st_lld.o.d  stm32_dma.o.d  test.o.d  testbmk.o.d  testdyn.o.d  (+11 more)
stm32/lib/ChibiOS_16.1.4/os/hal/: hal.mk
stm32/lib/ChibiOS_16.1.4/os/hal/ports/STM32/STM32F4xx/: platform.mk
stm32/lib/ChibiOS_16.1.4/os/rt/: rt.mk
stm32/src/: autotuxconfig.h  controlOutput.c  controlOutput.h  main.c  sensorInput.c  sensorInput.h
stm32/src/hardware/: controlOutput.c  controlOutput.h  hardwareIR.c  hardwareIR.h  hardwareLights.c  hardwareLights.h  hardwarePWM.c  hardwarePWM.h  hardwareRC.c  hardwareRC.h  hardwareUS.c  hardwareUS.h  hardwareWE.c  hardwareWE.h  neopixelSWD.c  neopixelSWD.h  sensorInput.h
stm32/src/serial/: packetHandler.c  packetHandler.h  serialConnection.c  serialConnection.h
(+57 files in other folders)
